mingle/test/gauge/smokeTests/libs/com.thoughtworks.twist.driver.sahi_3.0.0.13132-b6ff0d9ea3753c/sahi/userdata/scripts/demo/shouldfail/syntax_error_line_number.sah
function fn1(){
	var $a = 1;


	$a = 2;

	$a = $xx;	
}

fn1();
